--- a/embed/list_directory.html
+++ b/embed/list_directory.html
@@ -180,6 +180,17 @@
     {{- end }}
   </ul>
 </form>
+  {{- if or $.PreviousFileExists $.NextFile }}
+  <div class='mv3 flex flex-wrap items-center'>
+    {{- if $.PreviousFileExists }}
+    <div><a href='?before={{ (index $.Files 0).Name }}&limit={{ $.Limit }}'>&larr; previous</a></div>
+    {{- end }}
+    <div class='flex-grow-1'></div>
+    {{- if $.NextFile }}
+    <div><a href='?from={{ $.NextFile }}&limit={{ $.Limit }}'>next &rarr;</a></div>
+    {{- end }}
+  </div>
+  {{- end }}
 {{- else }}
   {{- if and (not $.From) (not $.Before) }}
   <div class='mv4 tc'>
