--- a/embed/test_input.html
+++ b/embed/test_input.html
@@ -6,6 +6,10 @@
 <title>Create file</title>
 <body class='centered-body'>
 <img src='relative.jpg'>
+<!-- &url.URL{Scheme:"", Opaque:"", User:(*url.Userinfo)(nil), Host:"", Path:"relative.jpg", RawPath:"", OmitHost:false, ForceQuery:false, RawQuery:"", Fragment:"", RawFragment:""} -->
 <img src='https://imgur.com/some/image.jpg'>
+<!-- &url.URL{Scheme:"https", Opaque:"", User:(*url.Userinfo)(nil), Host:"imgur.com", Path:"/some/image.jpg", RawPath:"", OmitHost:false, ForceQuery:false, RawQuery:"", Fragment:"", RawFragment:""} -->
 <img src='/themes/absolute.jpg'>
+<!-- &url.URL{Scheme:"", Opaque:"", User:(*url.Userinfo)(nil), Host:"", Path:"/themes/absolute.jpg", RawPath:"", OmitHost:false, ForceQuery:false, RawQuery:"", Fragment:"", RawFragment:""} -->
 <img src='/path/to/image.jpg'>
+<!-- &url.URL{Scheme:"", Opaque:"", User:(*url.Userinfo)(nil), Host:"", Path:"/path/to/image.jpg", RawPath:"", OmitHost:false, ForceQuery:false, RawQuery:"", Fragment:"", RawFragment:""} -->
