--- a/embed/list_directory.html
+++ b/embed/list_directory.html
@@ -160,7 +160,7 @@
   <div>{{ generateBreadcrumbLinks $.SitePrefix $.FilePath }}</div>
   <div class='flex-grow-1'></div>
   {{- if eq (head $.FilePath) "posts" }}
-  <div><a href=''>view posts</a></div>
+  <div><a href='/{{ $.FilePath }}/'>view posts</a></div>
   {{- end }}
 </div>
 {{- if $.Files }}
