--- a/embed/createfile.html
+++ b/embed/createfile.html
@@ -25,7 +25,7 @@
   <div class='mv3 b tc'>Can't create a file here.</div>
 </div>
 {{- else }}
-<form method='post' action='/{{ join "files" $.SitePrefix "createfile" }}/' class='mv5 w-80 w-70-m w-60-l center'>
+<form method='post' action='/{{ join "files" $.SitePrefix "createfile" }}/' class='mv2'>
   {{- if referer }}
   <div><a href='{{ referer }}' data-go-back>&larr; back</a></div>
   {{- else }}
@@ -74,6 +74,9 @@
     <li>text-raw.txt</li>
   </ul>
   {{- end }}
+  <div data-codemirror>
+    <textarea id='content' name='content' dir='auto' class='w-100 pa2 min-h5 h6 resize-vertical code' autofocus></textarea>
+  </div>
   <button type='submit' class='button ba br2 pa2 mv3 w-100'>
     {{- if eq (head $.Parent) "pages" }}
     Create page
