--- a/embed/createfile.html
+++ b/embed/createfile.html
@@ -75,7 +75,7 @@
   </ul>
   {{- end }}
   <div data-codemirror>
-    <textarea id='content' name='content' dir='auto' class='w-100 pa2 min-h5 h6 resize-vertical code' autofocus></textarea>
+    <textarea id='content' name='content' dir='auto' class='w-100 pa2 min-h5 h6 resize-vertical code'>{{ $.Content }}</textarea>
   </div>
   <button type='submit' class='button ba br2 pa2 mv3 w-100'>
     {{- if eq (head $.Parent) "pages" }}
