--- a/embed/postlist.html
+++ b/embed/postlist.html
@@ -13,17 +13,16 @@ p, ul, ol { margin-bottom: 2em; color: #1d1d1d; font-family: sans-serif; }
 <hr>
 <h1>{{ if $.Category }}{{ $.Category }}{{ else }}posts{{ end }}</h1>
 {{- if $.Posts }}
-  <ul>
+  <ul style='padding-left: 1rem; padding-right: 1rem;'>
     {{- range $post := $.Posts }}
-    <li style='margin: 1rem 0;'>
+    <li>
       <div>
-        <span style='font-weight: bold;'>{{ $post.Title }}</span>
+        <a href='{{ $post.Name }}/' style='font-weight: bold;'>{{ $post.Title }}</a>
         <span style='margin-left: 0.5rem; font-size: 0.875rem; color: #555555;'>{{ $post.CreationTime.Format "2006-01-02" }}</span>
       </div>
       <div title='{{ $post.Preview }}' style='margin: 0.25rem 0; font-size: 0.875rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;'>
         {{ $post.Preview }}
       </div>
-      <div><a href='{{ $post.Name }}/'>read more</a></div>
     </li>
     {{- end }}
   </ul>
