--- a/embed/postlist.html
+++ b/embed/postlist.html
@@ -43,5 +43,5 @@ p, ul, ol { margin-bottom: 2em; color: #1d1d1d; font-family: sans-serif; }
   </div>
   {{- end }}
 {{- else }}
-  <p>No posts</p>
+  <p>- No posts -</p>
 {{- end }}
