--- a/embed/file.html
+++ b/embed/file.html
@@ -32,7 +32,8 @@
   <div class='flex-grow-1'></div>
   <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
 </div>
-{{- else if eq (index $.PostRedirectGet "from") "files" }}
+{{- end }}
+{{- if eq (index $.PostRedirectGet "from") "files" }}
 <div role='alert' class='alert mv2 pa2 br2 flex items-center'>
   <div>Saved</div>
   <div class='flex-grow-1'></div>
