--- a/embed/list_root_directory.html
+++ b/embed/list_root_directory.html
@@ -35,6 +35,29 @@
 </div>
 {{- end }}
 
+{{- if eq (index $.PostRedirectGet "from") "regenerate" }}
+  {{ $count := index $.PostRedirectGet "count" }}
+  {{ $timeTaken := index $.PostRedirectGet "timeTaken" }}
+  {{ $templateErrors := index $.PostRedirectGet "templateErrors" }}
+  {{- if $templateErrors }}
+  <div class='b invalid-red'>template errors:</div>
+  <ul class='list-style-disc ph3 invalid-red'>
+    {{- range $error := $templateErrors }}
+    <li>{{ $error }}</li>
+    {{- end }}
+  </ul>
+  {{- else }}
+  <div role='alert' class='alert mv2 pa2 br2 flex items-center'>
+    {{ if $count }}
+    <div>Site regenerated ({{ $count }} file{{ if ne $count 1.0 }}s{{ end }} in {{ $timeTaken }})</div>
+    {{- else }}
+    <div>Site regenerated</div>
+    {{- end }}
+    <div class='flex-grow-1'></div>
+    <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
+  </div>
+  {{- end }}
+{{- end }}
 {{- if eq (index $.PostRedirectGet "from") "createsite" }}
 <div role='alert' class='alert mv2 pa2 br2 flex items-center'>
   <div>Site created: <a href='/files/{{ index $.PostRedirectGet "sitePrefix" }}/'>{{ trimPrefix (index $.PostRedirectGet "sitePrefix") "@" }}</a></div>
@@ -73,8 +96,8 @@
         {{ template "octicons-sync" }}
         {{ template "octicons-triangle-down" }}
       </summary>
-      <form class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
-        <div class='ma2 tr'><button type='button' class='button ba br2 pa2 nowrap'>regenerate site</button></div>
+      <form method='post' action='/{{ join "files" $.SitePrefix "regenerate" }}/' class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
+        <div class='ma2 tr'><button type='submit' class='button ba br2 pa2 nowrap'>regenerate site</button></div>
       </form>
     </details>
   </div>
